# biosim4

./: CMakeLists.txt  Ideas.txt  Makefile  biosim4.ini
src/: CMakeLists.txt  analysis.cpp  imageWriter.cpp  indiv.h  load-and-save.cpp  load-and-save.h  params.cpp  params.h  simulator.cpp  simulator.h  spawnNewGeneration.cpp  survival-criteria.cpp
tools/: avi2ogg.sh  graph-nnet.py  graphlog-genomeLength.gp  graphlog.gp  make_html_report.py  net.txt  save_results.sh
