cmake_minimum_required(VERSION 3.0.0)
project(BioSim4 VERSION 0.2.0)

include(CTest)
enable_testing()

add_subdirectory(src)

install(FILES ./biosim4.ini DESTINATION ./)
install(DIRECTORY ./tools/ DESTINATION tools FILE_PERMISSIONS 
    OWNER_WRITE OWNER_READ OWNER_EXECUTE
    GROUP_READ GROUP_READ GROUP_EXECUTE
    GROUP_READ WORLD_READ WORLD_EXECUTE)
install (DIRECTORY DESTINATION "logs" DIRECTORY_PERMISSIONS 
    OWNER_WRITE OWNER_READ OWNER_EXECUTE
    GROUP_READ GROUP_READ GROUP_EXECUTE
    GROUP_READ WORLD_READ WORLD_EXECUTE)
install (DIRECTORY DESTINATION "images" DIRECTORY_PERMISSIONS 
    OWNER_WRITE OWNER_READ OWNER_EXECUTE
    GROUP_READ GROUP_READ GROUP_EXECUTE
    GROUP_READ WORLD_READ WORLD_EXECUTE)

# does the application run
#add_test(NAME Runs COMMAND ./bin/biosim4 WORKING_DIRECTORY )

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
